logs/Slang/chapter-6/6.19.5.3--enum_next.sv.log
name: enum_next
description: enum next method tests
should_fail: 0
tags: 6.19.5.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.19.5.3--enum_next.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.19.5.3--enum_next.sv:12:13: error: unknown built-in method 'next'
		val = val.next();
		          ^~~~
